## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# $Id: Makefile.am,v 1.10 2001/06/24 17:20:13 sian Exp $

if ENABLE_PRIVATE
SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 demultiplexer #divxdecore
DIST_SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 demultiplexer #divxdecore
else
SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 demultiplexer
DIST_SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 demultiplexer
endif
