## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# $Id: Makefile.am,v 1.12 2004/01/03 10:28:01 sian Exp $

SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 mpeg2.old demultiplexer avcodec
DIST_SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 mpeg2.old demultiplexer avcodec
