## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# $Id: Makefile.am,v 1.13 2004/01/18 07:13:43 sian Exp $

SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 mpeg2.old demultiplexer avcodec mad
DIST_SUBDIRS = utils dllloader enfle X11 mpglib mpeg2 mpeg2.old demultiplexer avcodec mad
